# smis-providers

./: AUTHORS  COPYING  LICENSE  Makefile.am  README  acinclude.m4  autoconfiscate.sh  configure.ac  smis-providers.spec.in
etc/: smsetup.conf
package/: smis-providers.changes  smis-providers.spec
src/: Makefile.am
src/include/: Makefile.am
src/lib/: Makefile.am
src/providers/: Makefile.am
src/providers/Array-Profile/: ArrayProvider.c  ArrayProvider.h  CopyServicesExtrinsic.c  CopyServicesExtrinsic.h  LvmCopyServices.c  LvmCopyServices.h  Makefile.am  StorageCapability.c  StorageCapability.h  StorageConfigurationService.c  StorageConfigurationService.h  StorageExtent.c  StorageExtent.h  StoragePool.c  StoragePool.h  StorageSetting.c  StorageSetting.h  StorageVolume.c  StorageVolume.h  Utils.c  Utils.h  provider-register.sh
src/providers/Array-Profile/mof/: OMC_AllocatedFromStoragePool.mof  OMC_AssociatedComponentExtent.mof  OMC_AssociatedRemainingExtent.mof  OMC_BasedOn.mof  OMC_CompositeExtent.mof  OMC_CompositeExtentBasedOn.mof  OMC_HostedStorageConfigurationService.mof  OMC_HostedStoragePool.mof  OMC_LogicalDisk.mof  OMC_LogicalDiskDevice.mof  OMC_StorageCapabilities.mof  OMC_StorageConfigurationCapabilities.mof  OMC_StorageConfigurationElementCapabilities.mof  OMC_StorageConfigurationService.mof  OMC_StorageElementCapabilities.mof  OMC_StorageElementSettingData.mof  OMC_StorageExtent.mof  OMC_StoragePool.mof  OMC_StorageSettingWithHints.mof  OMC_StorageSettingsGeneratedFromCapabilities.mof  OMC_StorageVolume.mof  OMC_StorageVolumeDevice.mof  OMC_SystemStorageCapabilities.mof
src/providers/Array-Profile/regs/: Array.reg  OMC_Array.sfcb.reg
src/providers/copy-services-profile/: CopyServicesProvider.c  CopyServicesProvider.h  Makefile.am  StorageReplicationCapabilities.c  StorageReplicationCapabilities.h  StorageReplicationElementCapabilities.c  StorageReplicationElementCapabilities.h  StorageSynchronized.c  StorageSynchronized.h
src/providers/copy-services-profile/mof/: OMC_LogicalDiskStorageSynchronized.mof  OMC_StorageReplicationCapabilities.mof  OMC_StorageReplicationElementCapabilities.mof  OMC_StorageVolumeStorageSynchronized.mof
src/providers/copy-services-profile/regs/: OMC_CopyServices.sfcb.reg
src/providers/server-profile/: Makefile.am  RegisteredProfile.c  RegisteredProfile.h  ServerProvider.c  ServerProvider.h  SoftwareIdentity.c  SoftwareIdentity.h  provider-register.sh
src/providers/server-profile/mof/: OMC_ElementConformsToSMIProfile.mof  OMC_RegisteredSMIProfile.mof  OMC_RegisteredSMISubProfile.mof  OMC_SMIArraySoftware.mof  OMC_SMIElementSoftwareIdentity.mof  OMC_SMISubProfileRequiresProfile.mof  OMC_SMIVolumeManagementSoftware.mof  deploy.mof
src/providers/server-profile/regs/: OMC_Server.sfcb.reg
